# htmx_server

./: .gitignore  README.md  buildall.ps1  buildall.sh  index.html  meson.build
src/: htmx_server.cpp
ssl/: ca.crt  ca.key  ca.srl  server.crt  server.csr  server.key
